crates/solidity-v2/testing/snapshots/diagnostics_output/semantic/constant_cycles/storage_base_slot/evaluation_depth_exceeded/generated/slang/0.8.29-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Cyclic constant definition (or maximum recursion depth exhausted).
    ╭─[input.sol:45:1]
    │
 45 │ contract C layout at C0 {}
    │ ─────────────┬────────────  
    │              ╰────────────── Error occurred here.
────╯
